--- a/Styles/newsInnerPage4.css
+++ b/Styles/newsInnerPage4.css
@@ -146,7 +146,8 @@
 
 
 .news-List{
-    margin-top: 50px;
+    margin-top: 100px;
+    margin-left: 180px;
     
 }
 .newInnerpages{
@@ -213,3 +214,15 @@
     transition: all 0.5s ease;
  }
  
+
+
+ .newInnerpages a{
+    text-decoration: none;
+    color: black;
+    transition: all 0.5s ease;
+ }
+ .newInnerpages a:hover{
+    text-decoration: none;
+    color:blue;
+    font-size: 22px;
+ }
