--- a/Styles/newsPage.css
+++ b/Styles/newsPage.css
@@ -4,8 +4,11 @@
     padding: 0;
     font-family: "Roboto", sans-serif;
 }
+body{
+    background-color: whitesmoke;
+}
 .news-div{
-    
+    margin-right: 100px;
 }
 .news-div h3{
     text-align: center;
@@ -223,3 +226,113 @@
     border: 2px white solid;
     transform: scale(1.1);
 }
+
+
+
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+
+}
+.nav-bar{
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-between;
+    width: 99%;
+    margin-bottom: 50px;
+    margin-top: 20px;
+    height: 100px;
+    border-radius: 50px;
+    /* background: linear-gradient(45deg,rgb(8, 86, 150),rgb(236, 90, 171)); */
+    background: rgb(14, 67, 88);
+}
+.nav-bar a{
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    display: block;
+    transition: all o.5s ease;
+}
+.nav-bar a:hover{
+   color: ghostwhite;
+}
+
+.nav-bar ul{
+    display: flex;
+    
+}
+.nav-bar li{
+    list-style: none;
+    padding: 20px;
+    margin-top: 10px;
+    transition: all 0.5s ease;
+}
+
+
+
+.nav-bar ul li ul .drop-down li{
+    display: block;
+    transition: all 0.5s ease;
+}
+
+ul li ul.drop-down  {  
+    /* background: linear-gradient(45deg,rgb(8, 86, 150),rgb(236, 90, 171)); */
+    background: rgb(14, 67, 88); 
+       margin-top: 50px;
+    width: 150px;
+    position: absolute;
+    z-index: 999;
+    display: none; 
+    /* margin-top: 10px; */
+    border-radius: 10px;
+    
+    transition: all 0.5s ease;
+   
+}
+ul li:hover ul.drop-down {
+    display: block;
+   
+}
+
+.drop-down li a{
+    transition: all 0.5s ease;
+}
+.drop-down li a:hover{
+   color: white;
+}
+.nav-bar h1{
+    margin-left: 30px;
+    margin-top: 20px;
+    color: white;
+    transition: all 0.5s ease;
+}
+.nav-bar h1:hover{
+    color: black;
+}
+.nav-bar .nav-btn{
+    margin-right: 10px;
+    margin-top: 20px;
+   
+}
+.nav-btn button{
+    border: none;
+    width: 130px;
+    height: 50px;
+    border-radius: 20px;
+    font-size: 18px;
+    background-color: transparent;
+    
+    transition: all 0.5s ease;
+}
+.nav-btn a:hover{
+    color: white;
+}
+.nav-btn button:hover{
+    background-color: rgb(87, 141, 202);
+    color: white;
+} 
+
+
