--- a/Styles/newsInnerPage1.css
+++ b/Styles/newsInnerPage1.css
@@ -8,13 +8,13 @@
     display: flex;
 }
 .news{
-    margin-top: 50px;
+    margin-top: 200px;
     margin-left: 150px;
 }
 .news h1{
     font-size: 50px;
     margin-bottom: 30px;
-    margin-top: 100px;
+   
 }
 .news p{
     font-size: 20px;
@@ -41,6 +41,7 @@
 .icons-div  ion-icon{
   
     border:2px solid rgba(255, 255, 255, 0.61) ;
+    font-size: 30px;
     width: 100px;
     height: 30px;
     color: white;
@@ -285,7 +286,7 @@ form input{
     scroll-behavior: smooth;
 }
 
-.container {
+/* .container {
   
     background-size: cover;
     height: auto;
@@ -296,7 +297,7 @@ form input{
     font-family: sans-serif
     
 
-}
+} */
 
 .navbar {
     background-image: url(../Images/nav-footer-bg-img.jpg);
@@ -324,9 +325,16 @@ form input{
 
 .logo img {
     height: 100px;
-    width: 280px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
 }
-
+.footer img{
+    height: 100px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
+}
 .nav {
     margin-left: 200px;
     margin-right: 20px;
@@ -513,10 +521,10 @@ tr:nth-child(even) {
 tr:hover {
     background-color: #f1f1f1;
 }
-.container h3{
+/* .container h3{
     font-size: 30px;
     padding: 10px;
-}
+} */
 
 
 
@@ -547,4 +555,15 @@ tr:hover {
 }
 .footer li a:hover{
     color: orangered;
+}
+.icons i{
+    font-size: 30px;
+    margin-left: 20px;
+    margin-top: 20px;
+    transition: all 0.5s ease;
+}
+.icons i:hover{
+ font-size: 35px;   
+ color: gray;
+ transform: scale(1.1);
 }
