--- a/Styles/newsInnerPage8.css
+++ b/Styles/newsInnerPage8.css
@@ -8,7 +8,7 @@
     display: flex;
 }
 .news{
-    margin-top: 50px;
+    margin-top: 200px;
     margin-left: 150px;
 }
 .news h1{
@@ -146,7 +146,7 @@
 
 
 .news-List{
-    margin-top: 100px;
+    margin-top: 200px;
     margin-left: 180px;
 }
 .newInnerpages{
@@ -295,7 +295,15 @@
 
 .logo img {
     height: 100px;
-    width: 280px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
+}
+.footer img{
+    height: 100px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
 }
 
 .nav {
@@ -483,10 +491,10 @@ tr:nth-child(even) {
 tr:hover {
     background-color: #f1f1f1;
 }
-.container h3{
+/* .container h3{
     font-size: 30px;
     padding: 10px;
-}
+} */
 
 
 
@@ -517,4 +525,15 @@ tr:hover {
 }
 .footer li a:hover{
     color: orangered;
+}
+.icons i{
+    font-size: 30px;
+    margin-left: 20px;
+    margin-top: 20px;
+    transition: all 0.5s ease;
+}
+.icons i:hover{
+ font-size: 35px;   
+ color: gray;
+ transform: scale(1.1);
 }
