--- a/Styles/newsPage.css
+++ b/Styles/newsPage.css
@@ -346,7 +346,18 @@ ul li:hover ul.drop-down {
 
 
 
-
+/* .logo img {
+    height: 100px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
+} */
+.footer img{
+    height: 100px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
+}
 
 
 html{
@@ -887,4 +898,15 @@ tr:hover {
 }
 .footer li a:hover{
     color: orangered;
+}
+.icons i{
+    font-size: 30px;
+    margin-left: 20px;
+    margin-top: 20px;
+    transition: all 0.5s ease;
+}
+.icons i:hover{
+ font-size: 35px;   
+ color: gray;
+ transform: scale(1.1);
 }
