--- a/Styles/productInnerpage1.css
+++ b/Styles/productInnerpage1.css
@@ -43,12 +43,25 @@ html{
         transform: translateY(0);
     }
 }
-
+/* 
 .logo img {
+    height: 50px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
+} */
+.footer img{
     height: 100px;
-    width: 280px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
 }
-
+.footer img{
+    height: 100px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
+}
 .nav {
     margin-left: 200px;
     margin-right: 20px;
@@ -548,4 +561,15 @@ tr:hover {
 }
 .footer li a:hover{
     color: orangered;
+}
+.icons i{
+    font-size: 30px;
+    margin-left: 20px;
+    margin-top: 20px;
+    transition: all 0.5s ease;
+}
+.icons i:hover{
+ font-size: 35px;   
+ color: gray;
+ transform: scale(1.1);
 }
