--- a/Styles/newsInnerPage4.css
+++ b/Styles/newsInnerPage4.css
@@ -8,7 +8,7 @@
     display: flex;
 }
 .news{
-    margin-top: 50px;
+    margin-top: 200px;
     margin-left: 150px;
 }
 .news h1{
@@ -146,7 +146,7 @@
 
 
 .news-List{
-    margin-top: 100px;
+    margin-top: 200px;
     margin-left: 180px;
     
 }
@@ -274,9 +274,16 @@
 
 .logo img {
     height: 100px;
-    width: 280px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
 }
-
+.footer img{
+    height: 100px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
+}
 .nav {
     margin-left: 200px;
     margin-right: 20px;
@@ -462,10 +469,10 @@ tr:nth-child(even) {
 tr:hover {
     background-color: #f1f1f1;
 }
-.container h3{
+/* .container h3{
     font-size: 30px;
     padding: 10px;
-}
+} */
 
 
 
@@ -496,4 +503,15 @@ tr:hover {
 }
 .footer li a:hover{
     color: orangered;
+}
+.icons i{
+    font-size: 30px;
+    margin-left: 20px;
+    margin-top: 20px;
+    transition: all 0.5s ease;
+}
+.icons i:hover{
+ font-size: 35px;   
+ color: gray;
+ transform: scale(1.1);
 }
