--- a/Styles/newsInnerPage5.css
+++ b/Styles/newsInnerPage5.css
@@ -8,8 +8,8 @@
     display: flex;
 }
 .news{
-    margin-top: 50px;
-    margin-left: 150px;
+    margin-top: 200px;
+    margin-left: 100px;
 }
 .news h1{
     font-size: 50px;
@@ -146,8 +146,8 @@
 
 
 .news-List{
-    margin-top: 100px;
-    margin-left: 120px;
+    margin-top: 200px;
+    margin-left: 180px;
     
 }
 .newInnerpages{
@@ -255,7 +255,7 @@
     scroll-behavior: smooth;
 }
 
-.container {
+/* .container {
    
     background-size: cover;
     height: auto;
@@ -266,7 +266,7 @@
     font-family: sans-serif
     
 
-}
+} */
 
 .navbar {
     background-image: url(../Images/nav-footer-bg-img.jpg);
@@ -294,9 +294,16 @@
 
 .logo img {
     height: 100px;
-    width: 280px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
 }
-
+.footer img{
+    height: 100px;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 100%;
+}
 .nav {
     margin-left: 200px;
     margin-right: 20px;
@@ -482,10 +489,10 @@ tr:nth-child(even) {
 tr:hover {
     background-color: #f1f1f1;
 }
-.container h3{
+/* .container h3{
     font-size: 30px;
     padding: 10px;
-}
+} */
 
 
 
@@ -516,4 +523,15 @@ tr:hover {
 }
 .footer li a:hover{
     color: orangered;
+}
+.icons i{
+    font-size: 30px;
+    margin-left: 20px;
+    margin-top: 20px;
+    transition: all 0.5s ease;
+}
+.icons i:hover{
+ font-size: 35px;   
+ color: gray;
+ transform: scale(1.1);
 }
